some debugging is made

--- a/001-roman-numerals-converter/rafe_python_roman_numerals.ipynb
+++ b/001-roman-numerals-converter/rafe_python_roman_numerals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -10,7 +10,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Your number is --MCXI-- in roman numerals.\n"
+     "text": "Your number is --MMMDCXIVI-- in roman numerals.\n"
     }
    ],
    "source": [
@@ -47,6 +47,11 @@
     "        say = (say - (X * 10))\n",
     "        roman+= X*'X'\n",
     "\n",
+    "    V = say//5\n",
+    "    if V != 0 :\n",
+    "        say = (say - (V * 5))\n",
+    "        roman+= V*'V'\n",
+    "\n",
     "    I = say\n",
     "    if I != 0:\n",
     "        roman+= say*'I'\n",
@@ -57,6 +62,7 @@
     "    roman3=roman2.replace('LXXXX', 'XC') # this is for 90\n",
     "    roman4=roman3.replace('XXXX', 'XL') # this is for 40\n",
     "    roman5=roman4.replace('IIIIIIIII', 'IX') # this is for 9\n",
+    "    \n",
     "    roman6=roman5.replace('IIIIIIII', 'VIII') # this is for 8, this is an additional exception\n",
     "    roman7=roman6.replace('IIII', 'IV') # this is for 4\n",
     "    \n",
@@ -65,6 +71,13 @@
     "else:\n",
     "    print(\"Not Valid! Please enter a number between 1 and 3999 inclusively.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
