some changes made

--- a/001-roman-numerals-converter/rafe_python_roman_numerals.ipynb
+++ b/001-roman-numerals-converter/rafe_python_roman_numerals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -10,7 +10,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Your number is --MMMDCXIVI-- in roman numerals.\n"
+     "text": "Your number is --XCIX-- in roman numerals.\n"
     }
    ],
    "source": [
@@ -61,12 +61,11 @@
     "    roman2=roman1.replace('CCCC', 'CD') # this is for 400\n",
     "    roman3=roman2.replace('LXXXX', 'XC') # this is for 90\n",
     "    roman4=roman3.replace('XXXX', 'XL') # this is for 40\n",
-    "    roman5=roman4.replace('IIIIIIIII', 'IX') # this is for 9\n",
+    "    roman5=roman4.replace('VIIII', 'IX') # this is for 9\n",
+    "    roman6=roman5.replace('IIII', 'IV') # this is for 4\n",
     "    \n",
-    "    roman6=roman5.replace('IIIIIIII', 'VIII') # this is for 8, this is an additional exception\n",
-    "    roman7=roman6.replace('IIII', 'IV') # this is for 4\n",
     "    \n",
-    "    print(f'Your number is --{roman7}-- in roman numerals.')\n",
+    "    print(f'Your number is --{roman6}-- in roman numerals.')\n",
     "    \n",
     "else:\n",
     "    print(\"Not Valid! Please enter a number between 1 and 3999 inclusively.\")"
